Bump java version in POM and make use of it