@@ -1,7 +1,5 @@
 package uk.gov.crowncommercial.dts.scale.cat.controller;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -20,7 +18,7 @@ public class AgreementsController {
 
   @GetMapping("/agreement-summaries")
   public Set<AgreementSummary> getAgreementSummaries() {
-    return new HashSet<>(Arrays.asList(agreementsService.findAll()));
+    return Set.of(agreementsService.findAll());
   }
 
 }
